# source-fox

./: .gitignore  Cargo.toml  deny.toml  flake.nix  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: check.yaml  docker-publish.yaml
docs/: README.md
event-processor/: Cargo.toml
event-processor/src/: lib.rs
github-event-handler/: Cargo.toml
github-event-handler/src/: api.rs  authentication.rs  handle.rs  lib.rs
github-event-receiver/: Cargo.toml
mergeable-compatibility-layer/: Cargo.toml
mergeable-compatibility-layer/src/configuration/: filter.rs
mergeable-compatibility-layer/tests/: all-configurable-elements-test.yaml
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs
server/src/routes/: event_handler.rs  ui.rs
server/src/routes/event_handler/: authentication.rs  extractors.rs
