[package]
name = "github-event-handler"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
octocrab.workspace = true
tracing.workspace = true
snafu.workspace = true
indoc.workspace = true
hyper.workspace = true
jsonwebtoken.workspace = true