[package]
name = "server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["tracing", "macros"] }
axum-core = "0.4.5"
base64 = "0.22.1"
bytes = "1.8.0"
const_format = "0.2.33"
envious = "0.2.2"
futures-util = "0.3.31"
hex = "0.4.3"
http-body-util = "0.1.2"
hyper = "1.5.0"
hyper-rustls = { version = "0.27.3", optional = true }
jsonwebtoken = "9.3.0"
metrics = { version = "0.24.0", default-features = false }
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
octocrab = { version = "0.41.2", features = [ "rustls-aws-lc-rs", "rustls-webpki-tokio"] }
aws-lc-sys = { version = "0.22.0", features = ["prebuilt-nasm"] }
orion = "0.17.7"
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = {version = "0.9.6", features = ["pem"]}
rustls = "0.23.16"
#secrecy = { version = "0.10.3", features = ["bytes"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tower = "0.5.1"
tower-http = "0.6.1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "local-time"] }

[dev-dependencies]
tracing-test = "0.2.5"
http-body-util = "0.1.2"

[features]
hyper-rustls = ["dep:hyper-rustls"]

[package.metadata.cargo-udeps.ignore]
normal = ["const_format"]
