[package]
name = "server"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
axum-core.workspace = true
base64.workspace = true
bytes.workspace = true
envious.workspace = true
futures-util.workspace = true
hex.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls = { workspace = true, optional = true }
jsonwebtoken.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
octocrab.workspace = true
orion.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rsa.workspace = true
rustls.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tracing-test.workspace = true
http-body-util.workspace = true

[features]
hyper-rustls = ["dep:hyper-rustls"]
